--- a/computer-solution/index.html
+++ b/computer-solution/index.html
@@ -9,8 +9,14 @@
   <link rel="icon" href="favicon.ico">
 
   <title>Computer Solution</title>
-  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <script src="popper.min.js"></script>
+  <script src="../bower_components/angular/angular.min.js"></script>
+  <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
+  <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="../bower_components/angular-route/angular-route.min.js"></script>
 </head>
 
 <body>
@@ -92,8 +98,6 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="jquery-3.2.1.slim.min.js"></script>
-<script src="popper.min.js"></script>
-<script src="bootstrap.min.js"></script>
+
 </body>
 </html>
