--- a/computer-solution/index.html
+++ b/computer-solution/index.html
@@ -43,23 +43,25 @@
     <div class="navbar-collapse collapse" uib-collapse="computerCtrl.collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">Home <span class="sr-only">(current)</span></a>
+          <a href="#!/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li>
-          <a href="#">Link</a>
-        </li>
-        <li>
-          <a href="#">Disabled</a>
-        </li>
-        <li uib-dropdown="computerCtrl.dropdown">
-          <a uib-dropdown-toggle="" href="#">Dropdown</a>
-          <ul uib-dropdown-menu="" class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-          </ul>
+          <a href="#!/about">About</a>
         </li>
 
+        <li uib-dropdown="computerCtrl.dropdown">
+          <a uib-dropdown-toggle="" href="#">Services</a>
+          <ul uib-dropdown-menu="" class="dropdown-menu">
+            <li><a href="#!/services/list">Serivces List</a></li>
+            <li class="divider"></li>
+            <li><a href="#!/services/hardware-repair">HardWare Repair</a></li>
+            <li><a href="#!/services/virus-remove">Virus Remove</a></li>
+            <li><a href="#!/services/system-tuneup">System Tuneup</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#!/contact">Contact</a>
+        </li>
       </ul>
       <form class="form-inline navbar-right">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -67,40 +69,12 @@
       </form>
     </div>
   </nav>
-
   <main role="main">
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1 class="display-3">Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
+    <div ng-view>
+
     </div>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
-
-    </div> <!-- /container -->
 
   </main>
 
