--- a/public/computer-solution/services-list.html
+++ b/public/computer-solution/services-list.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row" ng-repeat="service in servicesCtrl.services">
+  <div class="row" ng-repeat="service in listCtrl.services">
     <div class="col-md-2">
       <img ng-src="{{service.imageUrl}}" alt="" class="img-responsive">
     </div>
